<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_nome"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_email"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:inputType="textEmailAddress">

            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_cpf"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">
            </EditText>
        </TableRow>

        <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_data_nascimento"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:inputType="date">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_telefone"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:inputType="phone">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_rua"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eRua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_bairro"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eBairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_cidade"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_estado"
                android:layout_gravity="top">
            </TextView>

            <EditText
                android:id="@+id/eEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cadastro_cadastrar"
               android:onClick="SalvarUsuario"
               >
           </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_cancelar"
                >
            </Button>
        </TableRow>
    </TableLayout>
</ScrollView>
