<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center|top"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp">
        </ImageView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_login"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginBottom="20dp">
        </TextView>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_email"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"
            android:layout_gravity="center">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/editText_senha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_senha"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:layout_gravity="center">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/button_entrar"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/mainActivity_entrar"
                android:layout_gravity="top"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp">
            </Button>

            <Button
                android:id="@+id/button_criar_conta"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/mainActivity_criar_conta"
                android:layout_gravity="top"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:onClick="activityCriarConta">
            </Button>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
